plugins/opa/examples-rego-v1/nginx-cve-2023-5043/policy.success.yaml
# This manifest is used to test the accompanying OPA policy.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
# no configuration snippet annotation will allow this policy to succeed
  name: ingress-object
  namespace: staging
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: tofu.yahoo.com
    http:
      paths:
      - backend:
          service:
            name: tofu-svc
            port:
              number: 3000
        path: /
        pathType: Exact
